--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,9 @@
     "require": {
         "php": "^7.0"
     },
+  "require-dev": {
+    "phpunit/phpunit": "^8.0"
+  },
     "license": "MIT",
     "authors": [
         {
